--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2017 The OpenTracing Authors
+    Copyright 2017-2018 The OpenTracing Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -23,7 +23,7 @@
   <name>${project.groupId}:${project.artifactId}</name>
   <description>OpenTracing Instrumentation for JDBC API</description>
   <url>https://github.com/opentracing-contrib/java-jdbc</url>
-  <inceptionYear>2017</inceptionYear>
+  <inceptionYear>2017-2018</inceptionYear>
 
   <scm>
     <url>http://github.com/opentracing-contrib/java-jdbc</url>
@@ -59,7 +59,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
-    <opentracing.version>0.30.0</opentracing.version>
+    <opentracing.version>0.31.0-RC2</opentracing.version>
   </properties>
 
   <dependencies>
@@ -67,6 +67,14 @@
       <groupId>io.opentracing</groupId>
       <artifactId>opentracing-util</artifactId>
       <version>${opentracing.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.opentracing</groupId>
+      <artifactId>opentracing-util</artifactId>
+      <version>${opentracing.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -93,7 +101,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>4.3.12.RELEASE</version>
+      <version>4.3.13.RELEASE</version>
       <scope>test</scope>
     </dependency>
 
@@ -149,15 +157,6 @@
           <subject>opentracing</subject>
           <repo>maven</repo>
           <packageName>opentracing-jdbc</packageName>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
-        <configuration>
-          <reuseForks>false</reuseForks>
-          <forkCount>1</forkCount>
         </configuration>
       </plugin>
       <plugin>
@@ -223,7 +222,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.10.4</version>
+            <version>3.0.0</version>
             <configuration>
               <failOnError>false</failOnError>
             </configuration>
