--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
-    <opentracing.version>0.31.0-RC2</opentracing.version>
+    <opentracing.version>0.31.0</opentracing.version>
   </properties>
 
   <dependencies>
