--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,11 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.opentracing.contrib</groupId>
   <artifactId>opentracing-jdbc</artifactId>
-  <version>0.0.11-SNAPSHOT</version>
+  <version>0.0.11</version>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>OpenTracing Instrumentation for JDBC API</description>
@@ -32,7 +30,7 @@
     <connection>scm:git:https://github.com/opentracing-contrib/java-jdbc.git</connection>
     <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbc.git
     </developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.0.11</tag>
   </scm>
 
   <licenses>
