--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.opentracing.contrib</groupId>
   <artifactId>opentracing-jdbc</artifactId>
-  <version>0.0.12</version>
+  <version>0.0.13-SNAPSHOT</version>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>OpenTracing Instrumentation for JDBC API</description>
@@ -30,7 +30,7 @@
     <connection>scm:git:https://github.com/opentracing-contrib/java-jdbc.git</connection>
     <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbc.git
     </developerConnection>
-    <tag>0.0.12</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <licenses>
